datafusion-federation/src/sql/snapshots/datafusion_federation__sql__tests__cross_provider_not_exists.snap
---
source: datafusion-federation/src/sql/mod.rs
expression: "explain_query(&ctx,\n\"SELECT o_orderkey FROM orders WHERE NOT EXISTS \\\n                 (SELECT 1 FROM lineitem WHERE l_orderkey = o_orderkey)\",).await"
---
+---------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                                                                                                                      |
+---------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| logical_plan  | LeftAnti Join: orders.o_orderkey = __correlated_sq_1.l_orderkey                                                                                                                           |
|               |   Projection: orders.o_orderkey                                                                                                                                                           |
|               |     Federated                                                                                                                                                                             |
|               |  Projection: orders.o_orderkey, orders.o_custkey, orders.o_orderstatus, orders.o_orderdate                                                                                                |
|               |   TableScan: orders                                                                                                                                                                       |
|               |   SubqueryAlias: __correlated_sq_1                                                                                                                                                        |
|               |     Projection: lineitem.l_orderkey                                                                                                                                                       |
|               |       Federated                                                                                                                                                                           |
|               |  Projection: lineitem.l_orderkey, lineitem.l_suppkey, lineitem.l_commitdate, lineitem.l_receiptdate                                                                                       |
|               |   TableScan: lineitem                                                                                                                                                                     |
| physical_plan | HashJoinExec: mode=Partitioned, join_type=LeftAnti, accumulator=MinMaxLeftAccumulator, on=[(o_orderkey@0, l_orderkey@0)]                                                                  |
|               |   RepartitionExec: partitioning=Hash([o_orderkey@0], 4), input_partitions=1                                                                                                               |
|               |     ProjectionExec: expr=[o_orderkey@0 as o_orderkey]                                                                                                                                     |
|               |       SchemaCastScanExec                                                                                                                                                                  |
|               |         VirtualExecutionPlan name=TestExecutor compute_context=ctx_a base_sql=SELECT orders.o_orderkey, orders.o_custkey, orders.o_orderstatus, orders.o_orderdate FROM orders            |
|               |   RepartitionExec: partitioning=Hash([l_orderkey@0], 4), input_partitions=1                                                                                                               |
|               |     ProjectionExec: expr=[l_orderkey@0 as l_orderkey]                                                                                                                                     |
|               |       SchemaCastScanExec                                                                                                                                                                  |
|               |         VirtualExecutionPlan name=TestExecutor compute_context=ctx_b base_sql=SELECT lineitem.l_orderkey, lineitem.l_suppkey, lineitem.l_commitdate, lineitem.l_receiptdate FROM lineitem |
|               |                                                                                                                                                                                           |
+---------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
