datafusion-federation/src/sql/snapshots/datafusion_federation__sql__tests__mixed_provider_join_exists.snap
---
source: datafusion-federation/src/sql/mod.rs
expression: "explain_query(&ctx,\n\"SELECT s_name \\\n                 FROM supplier \\\n                 JOIN lineitem ON l_suppkey = s_suppkey \\\n                 WHERE EXISTS ( \\\n                     SELECT 1 FROM orders \\\n                     WHERE o_custkey = s_suppkey \\\n                 )\",).await"
---
+---------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                                                                                                                                                                           |
+---------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| logical_plan  | Projection: supplier.s_name                                                                                                                                                                                                                    |
|               |   Inner Join: supplier.s_suppkey = lineitem.l_suppkey                                                                                                                                                                                          |
|               |     Projection: supplier.s_suppkey, supplier.s_name                                                                                                                                                                                            |
|               |       Federated                                                                                                                                                                                                                                |
|               |  Projection: supplier.s_suppkey, supplier.s_name, supplier.s_nationkey                                                                                                                                                                         |
|               |   Filter: EXISTS (<subquery>)                                                                                                                                                                                                                  |
|               |     Subquery:                                                                                                                                                                                                                                  |
|               |       Projection: Int64(1)                                                                                                                                                                                                                     |
|               |         Filter: orders.o_custkey = outer_ref(supplier.s_suppkey)                                                                                                                                                                               |
|               |           TableScan: orders                                                                                                                                                                                                                    |
|               |     TableScan: supplier                                                                                                                                                                                                                        |
|               |     Projection: lineitem.l_suppkey                                                                                                                                                                                                             |
|               |       Federated                                                                                                                                                                                                                                |
|               |  Projection: lineitem.l_orderkey, lineitem.l_suppkey, lineitem.l_commitdate, lineitem.l_receiptdate                                                                                                                                            |
|               |   TableScan: lineitem                                                                                                                                                                                                                          |
| physical_plan | HashJoinExec: mode=Partitioned, join_type=Inner, accumulator=MinMaxLeftAccumulator, on=[(s_suppkey@0, l_suppkey@0)], projection=[s_name@1]                                                                                                     |
|               |   RepartitionExec: partitioning=Hash([s_suppkey@0], 4), input_partitions=1                                                                                                                                                                     |
|               |     ProjectionExec: expr=[s_suppkey@0 as s_suppkey, s_name@1 as s_name]                                                                                                                                                                        |
|               |       SchemaCastScanExec                                                                                                                                                                                                                       |
|               |         VirtualExecutionPlan name=TestExecutor compute_context=ctx_a base_sql=SELECT supplier.s_suppkey, supplier.s_name, supplier.s_nationkey FROM supplier WHERE EXISTS (SELECT 1 FROM orders WHERE (orders.o_custkey = supplier.s_suppkey)) |
|               |   RepartitionExec: partitioning=Hash([l_suppkey@0], 4), input_partitions=1                                                                                                                                                                     |
|               |     ProjectionExec: expr=[l_suppkey@1 as l_suppkey]                                                                                                                                                                                            |
|               |       SchemaCastScanExec                                                                                                                                                                                                                       |
|               |         VirtualExecutionPlan name=TestExecutor compute_context=ctx_b base_sql=SELECT lineitem.l_orderkey, lineitem.l_suppkey, lineitem.l_commitdate, lineitem.l_receiptdate FROM lineitem                                                      |
|               |                                                                                                                                                                                                                                                |
+---------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
