datafusion-federation/src/sql/snapshots/datafusion_federation__sql__tests__same_provider_aliased_not_exists.snap
---
source: datafusion-federation/src/sql/mod.rs
expression: "explain_query(&ctx,\n\"SELECT s_name, count(*) AS numwait \\\n                 FROM supplier, lineitem l1, orders \\\n                 WHERE s_suppkey = l1.l_suppkey \\\n                   AND l1.l_orderkey = o_orderkey \\\n                   AND l1.l_receiptdate > l1.l_commitdate \\\n                   AND NOT EXISTS ( \\\n                       SELECT 1 FROM lineitem l2 \\\n                       WHERE l2.l_orderkey = l1.l_orderkey \\\n                         AND l2.l_suppkey <> l1.l_suppkey \\\n                   ) \\\n                 GROUP BY s_name \\\n                 ORDER BY numwait DESC, s_name\",).await"
---
+---------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                     |
+---------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| logical_plan  | Federated                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                |
|               |  Sort: numwait DESC NULLS FIRST, supplier.s_name ASC NULLS LAST                                                                                                                                                                                                                                                                                                                                                                                                                                                                          |
|               |   Projection: supplier.s_name, count(Int64(1)) AS numwait                                                                                                                                                                                                                                                                                                                                                                                                                                                                                |
|               |     Aggregate: groupBy=[[supplier.s_name]], aggr=[[count(Int64(1))]]                                                                                                                                                                                                                                                                                                                                                                                                                                                                     |
|               |       Inner Join:  Filter: l1.l_orderkey = orders.o_orderkey                                                                                                                                                                                                                                                                                                                                                                                                                                                                             |
|               |         Inner Join:  Filter: supplier.s_suppkey = l1.l_suppkey                                                                                                                                                                                                                                                                                                                                                                                                                                                                           |
|               |           Filter: NOT EXISTS (<subquery>)                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                |
|               |             Subquery:                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                    |
|               |               Projection: Int64(1)                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                       |
|               |                 SubqueryAlias: l2                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                        |
|               |                   Filter: lineitem.l_orderkey = outer_ref(l1.l_orderkey) AND lineitem.l_suppkey != outer_ref(l1.l_suppkey)                                                                                                                                                                                                                                                                                                                                                                                                               |
|               |                     TableScan: lineitem                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                  |
|               |             TableScan: supplier                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                          |
|               |           SubqueryAlias: l1                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                              |
|               |             Filter: lineitem.l_receiptdate > lineitem.l_commitdate                                                                                                                                                                                                                                                                                                                                                                                                                                                                       |
|               |               TableScan: lineitem                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                        |
|               |         TableScan: orders                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                |
| physical_plan | SchemaCastScanExec                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                       |
|               |   CooperativeExec                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                        |
|               |     VirtualExecutionPlan name=TestExecutor compute_context=ctx_a base_sql=SELECT supplier.s_name, count(1) AS numwait FROM supplier INNER JOIN lineitem AS l1 ON (supplier.s_suppkey = l1.l_suppkey) INNER JOIN orders ON (l1.l_orderkey = orders.o_orderkey) WHERE NOT EXISTS (SELECT 1 FROM lineitem AS l2 WHERE ((lineitem.l_orderkey = l1.l_orderkey) AND (lineitem.l_suppkey <> l1.l_suppkey))) AND (l1.l_receiptdate > l1.l_commitdate) GROUP BY supplier.s_name ORDER BY numwait DESC NULLS FIRST, supplier.s_name ASC NULLS LAST |
|               |                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                          |
+---------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
