datafusion-federation/src/sql/snapshots/datafusion_federation__sql__tests__same_provider_exists.snap
---
source: datafusion-federation/src/sql/mod.rs
expression: "explain_query(&ctx,\n\"SELECT o_orderkey FROM orders WHERE EXISTS \\\n                 (SELECT 1 FROM lineitem WHERE l_orderkey = o_orderkey)\",).await"
---
+---------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                                                                                                                                                                                                                                                                                  |
+---------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| logical_plan  | Federated                                                                                                                                                                                                                                                                                                                                             |
|               |  Projection: orders.o_orderkey                                                                                                                                                                                                                                                                                                                        |
|               |   Filter: EXISTS (<subquery>)                                                                                                                                                                                                                                                                                                                         |
|               |     Subquery:                                                                                                                                                                                                                                                                                                                                         |
|               |       Projection: Int64(1)                                                                                                                                                                                                                                                                                                                            |
|               |         Filter: lineitem.l_orderkey = outer_ref(orders.o_orderkey)                                                                                                                                                                                                                                                                                    |
|               |           TableScan: lineitem                                                                                                                                                                                                                                                                                                                         |
|               |     TableScan: orders                                                                                                                                                                                                                                                                                                                                 |
| physical_plan | SchemaCastScanExec                                                                                                                                                                                                                                                                                                                                    |
|               |   CooperativeExec                                                                                                                                                                                                                                                                                                                                     |
|               |     VirtualExecutionPlan name=TestExecutor compute_context=ctx_a base_sql=SELECT orders.o_orderkey FROM orders WHERE EXISTS (SELECT 1 FROM lineitem WHERE (lineitem.l_orderkey = orders.o_orderkey)) rewritten_sql=EXPLAIN SELECT orders.o_orderkey FROM orders WHERE EXISTS (SELECT 1 FROM lineitem WHERE (lineitem.l_orderkey = orders.o_orderkey)) |
|               |                                                                                                                                                                                                                                                                                                                                                       |
+---------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
